force-app/main/default/objects/DocumentStoreAPISettings__mdt/DocumentStoreAPISettings__mdt.object-meta.xml
<CustomObject>
    <label>DocumentStoreAPISettings</label>
    <pluralLabel>DocumentStoreAPISettings</pluralLabel>
</CustomObject>