force-app/main/default/objects/DocumentStoreAPISettings__mdt/fields/API_ClientId__c.field-meta.xml
<CustomField>
    <fullName>API_ClientId__c</fullName>
    <label>API_ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>