force-app/main/default/objects/DocumentStoreAPISettings__mdt/fields/API_PartialEndpoint__c.field-meta.xml
<CustomField>
    <fullName>API_PartialEndpoint__c</fullName>
    <label>API_PartialEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>