force-app/main/default/objects/DocumentStoreAPISettings__mdt/fields/applicationId__c.field-meta.xml
<CustomField>
    <fullName>applicationId__c</fullName>
    <label>applicationId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>