force-app/main/default/objects/DocumentStoreAPISettings__mdt/fields/attachmentDocumentType__c.field-meta.xml
<CustomField>
    <fullName>attachmentDocumentType__c</fullName>
    <label>attachmentDocumentType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>