force-app/main/default/objects/DocumentStoreAPISettings__mdt/fields/emailDocumentName__c.field-meta.xml
<CustomField>
    <fullName>emailDocumentName__c</fullName>
    <label>emailDocumentName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>