force-app/main/default/objects/DocumentStoreAPISettings__mdt/fields/emailDocumentType__c.field-meta.xml
<CustomField>
    <fullName>emailDocumentType__c</fullName>
    <label>emailDocumentType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>