force-app/main/default/objects/DocumentStoreAPISettings__mdt/fields/Exception_Email__c.field-meta.xml
<CustomField>
    <fullName>Exception_Email__c</fullName>
    <label>Exception Email</label>
    <type>Email</type>
</CustomField>