force-app/main/default/objects/DocumentStoreAPISettings__mdt/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>Host information to be sent in the header</description>
    <label>Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>